# DL_based_dynObjDet

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: DetectedObject.msg
src/: kitti2rosbag.py  prediction.py
src/functions/: utils.py
