<?xml version="1.0"?>
<package format="2">
  <name>dynObjDet</name>
    <version>0.1.0</version>
  <description>PointPillars-based real-time 3D object detection for ROS1 with CPT</description>

  <maintainer email="jeongmok99@gmail.com"> Seunghyun Pyo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 빌드 시 필요 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- 실행 시 필요 -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- 외부 PyTorch 및 numpy (선택) -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>